--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ background-color:#DCDCDC;
 <br><br><br>
 <font size="5">LET THERE BE LIGHT</font><br><br>
 <b>Event:</b> Set your high score on Let There be Light (Blast Mode). Three highest scorers will be invited to a sudden death finals.<br><br>
-<img src="Light.JPG" style="max-height:360px;"><br><br>
+<img src="Light.jpg" style="max-height:360px;"><br><br>
 <b>Prize:</b> Let There Be Light commemorative etched glassware + an invite to the Carnival Championship Round.<br>
 <br>
 <img src="Glass.JPG" style="max-height:250px;"><br>
